[build-system]
requires = ["hatchling", "ipykernel"]
build-backend = "hatchling.build"

[project]
name = "postgres_kernel"
dynamic = ["version"]
authors = [{name = "Brian Schiller", email = "bgschiller@gmail.com"}]
dependencies = [
    'psycopg2>=2.6',
    'tabulate>=0.7.5',
    'jupyter-client',
    'ipykernel'
]
classifiers = [
    'Framework :: IPython',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3',
    'Topic :: System :: Shells',
]
readme = "README.md"

[project.urls]
Source = "https://github.com/bgschiller/postgres_kernel"

[tool.hatch.version]
path = "postgres_kernel/_version.py"

# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel.shared-data]
"data_kernelspec" = "share/jupyter/kernels/postgres_kernel"